Fix jumpy navbar

--- a/internal/static/css/navbar.css
+++ b/internal/static/css/navbar.css
@@ -24,7 +24,6 @@
 .header_content {
   display: flex;
   align-items: center;
-  justify-content: center;
   padding: 0 30px;
   min-height: 90px;
 }
